<resources>
    <string name="app_name">Facebook</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="register">Regisztráció</string>
    <string name="user_first_name">Keresztnév</string>
    <string name="user_second_name">Vezetéknév</string>
    <string name="email_address">Email</string>
    <string name="password_again">Jelszó újra</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Magánszemély</string>
    <string name="seller">Oldal</string>
    <string name="cancel">Mégse</string>
    <string name="person_name">Név</string>
    <string name="text_placeholder">Leírás</string>
    <string name="add_friend">Add friend</string>
    <string name="delete">Delete</string>
    <string name="take_picture">Take picture</string>
    <string-array name="phone_labels">
        <item>Otthon</item>
        <item>Munkahely</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>
    <string-array name="person_names">
        <item>Hajdú Erik</item>
        <item>Kocsis Krisztián</item>
        <item>Papp Miklós</item>
        <item>Rácz Csanád</item>
        <item>Szalai Zoltán</item>
        <item>Biró Valentin</item>
        <item>Zobor Tibor</item>
        <item>Orsós Róbert</item>
        <item>Mezei Boldizsár</item>
        <item>Antal Kevin</item>
        <item>Németh Emese</item>
        <item>Pap Zsanett</item>
        <item>Jónás Kamilla</item>
        <item>Biró Adrienn</item>
        <item>Mészáros Petra</item>
        <item>Soós Zsófia</item>
        <item>Illés Dalma</item>
        <item>Fekete Kata</item>
        <item>Kocsis Bettina</item>
        <item>Szilágyi Luca</item>
        <item>Fodor Gyula</item>
        <item>Kelemen Domonkos</item>
        <item>Farkas Ágnes</item>
        <item>Mezei Laura</item>
        <item>Pintér Márton</item>
        <item>Gáspár Júlia</item>
        <item>Szekeres Richárd</item>
        <item>Németh Ábel</item>
        <item>Lengyel Regina</item>
        <item>Szilágyi Krisztina</item>
    </string-array>
</resources>