<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/personName"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/person_name"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/post_text"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/personName"
            android:padding="8dp"
            android:text="@string/text_placeholder" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_text"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/add_friend"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/delete"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="openCamera"
                android:text="@string/take_picture"
                android:layout_gravity="center"/>
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>
